--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
       class="flex flex-col md:flex-row justify-around py-6 bg-[#0F172A] gap-4 md:gap-0 ps-8 sm:ps-0"
     >
       <p class="text-white">
-        <i class="fa-solid fa-copyright fa-sm"></i>Copyright. All rights
+        <i class="fa-solid fa-copyright fa-sm me-1"></i>Copyright. All rights
         reserved | Designed by Shafir
       </p>
       <ul class="list-none flex gap-4">
